[package]
name = "zenithwave"
version = "0.1.0"
edition = "2021"
description = "ZenithWave implementation in Rust"
authors = ["AbdullahRashid133"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
